test/contracts/fail/check-prefix.sol
import "ds-test/test.sol";

contract SolidityTest is DSTest {

    function setUp() public {
    }

    function check_trivial() public {
        assertTrue(false);
    }
}
